# Magicode

./: CMakeLists.txt  LICENSE  README.md  assets.qrc  main.cpp  mainwindow.cpp  mainwindow.ui  sfmlpreview.cpp  sfmlpreview.h  sfmlwidget.cpp  sfmlwidget.h
